argocd/apps/vcluster-staging/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
    environment: staging
    managed-by: argocd
    kargo.akuity.io/stage: staging
    app.kubernetes.io/name: staging
    app.kubernetes.io/component: namespace
    gateway.networking.k8s.io/allowed: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
    kargo.akuity.io/authorized-stage: staging
spec: {}
